--- a/react-using-cdn/index.html
+++ b/react-using-cdn/index.html
@@ -25,10 +25,10 @@
     const heading = React.createElement('h1',{
         //Tag attributes comes here.
         id:'titles'
-    },'Namaste React');
+    },'Hai React');
     const heading1 = React.createElement('h2',{
         id:'titles'
-    },'Namaste React');
+    },'Hai React');
     const container = React.createElement('div',{
         //Tag attributes comes here.
         id:'container'
